--- a/about.html
+++ b/about.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 	<title>Miracle</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<nav>
-		<a href="index.html"> index</a>
+	<nav class="navbar">
+		<a href="index.html"> home</a>
 		<a href="about.html"> about</a>
 		<a href="servicse.html"> services</a>
 	</nav>
 	<h1 style="background-color: royalblue;">ABOUT ME</h1>
-	<p>Kindness is in heart,Wisdom in my brain.I'm proud to be an Ambivert(social introvert).i spread knowledge to others and share my ideas with the aim of making a better world ,for a better future.For i abide in my rules and promises i make every time to accomadate in the society.</p>
-	<img src="./images/midnight crest.jpg" alt="blue crescent moon" width="250" height="250">
+	<p>Kindness is in heart,Wisdom in my brain.I'm proud to be an Ambivert(social introvert).I spread knowledge to others and share my ideas with the aim of making a better world ,for a better future.For i abide in my rules and promises i make every time to accomadate in the society.</p>
+	<img src="./images/crest.jfif" alt="blue crescent moon" width="250" height="250">
 	<!--About this image-->
 	<p>It's dark in the blue night,the glowing crescent lights up the sky.</p>
 	<h2>MY HOBBIES</h2>
@@ -22,5 +23,34 @@
 		<li>Dancing</li>
 		<li>Graphity</li>
 	</ol>
+	<div>
+	<h3> FUN FACTS</h3>
+	<p> Extreme crazy is one of my hidden talents but its only in experimental exercises and adventurous momments.<br>Despite the fun, i also acknowoledge new staffs and share with other to create something amazing.</p>
+	<hr>
+	<div>
+		<h3> SKILLS</h3>
+		<ul>
+			<li>Graphity</li>
+			<li>Swimming</li>
+			<li>Sleeping</li>
+			<li>Eating</li>
+			<li>Cooking</li>
+		</ul>
+		<h3> SUBJECT</h3>
+		<table style="border: 1px solid black;width: 100%;">
+			<tr>
+				<th>English</th>
+				<th>Mathematics</th>
+				<th>Kiswahili</th>
+			</tr>
+			<tr>
+				<td>A-</td>
+				<td>B</td>
+				<td>B+</td>
+			</tr>
+		</table>
+	</div>
+
+	</div>
 </body>
 </html>
